// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Line Chart renders 1`] = `
<div
  className="Panel__Container-wbwz0d-1 iOwlJO"
  style={
    Object {
      "height": 526,
    }
  }
>
  <div
    className="Panel__Header-wbwz0d-2 jWuxJy"
  >
    <button
      className="Panel__Button-wbwz0d-0 hhoDOq"
      onClick={[Function]}
    >
      <svg
        className="sc-iitrsy Panel__IconRefreshStyled-wbwz0d-3  esdMFj"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M9.638 2.493a1 1 0 011.369-.355l5 2.938a1 1 0 01.328 1.411l-3 4.562a1 1 0 11-1.67-1.098l1.858-2.827C8.67 8.048 5 12.314 5 17.438c0 5.799 4.701 10.5 10.5 10.5S26 23.237 26 17.438c0-3.075-1.32-5.84-3.428-7.761a1 1 0 111.348-1.478A12.47 12.47 0 0128 17.438c0 6.903-5.596 12.5-12.5 12.5S3 24.34 3 17.438c0-5.855 4.025-10.77 9.458-12.128L9.993 3.862a1 1 0 01-.355-1.369z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </button>
    <div />
    <button
      className="Panel__Button-wbwz0d-0 jfgGzg"
      onClick={[Function]}
    >
      <svg
        className="sc-hkwnrn"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M3 19a1 1 0 011 1v5a3 3 0 003 3h18a3 3 0 003-3v-5a1 1 0 112 0v5a5 5 0 01-5 5H7a5 5 0 01-5-5v-5a1 1 0 011-1z"
          fill="currentColor"
          fillRule="evenodd"
        />
        <path
          clipRule="evenodd"
          d="M16.707 23.707a1 1 0 01-1.414 0l-6-6a1 1 0 111.414-1.414L15 20.586V3a1 1 0 112 0v17.586l4.293-4.293a1 1 0 011.414 1.414l-6 6z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </button>
    <button
      className="Panel__Button-wbwz0d-0 jfgGzg"
      onClick={[Function]}
    >
      <svg
        className="sc-exiMuG"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M2 11a1 1 0 102 0V5.41L14.586 16 4 26.59V21a1 1 0 10-2 0v8a1 1 0 001 1h8a1 1 0 100-2H5.419L16 17.415 26.581 28H21a1 1 0 100 2h8a1 1 0 001-1v-8a1 1 0 10-2 0v5.59L17.414 16 28 5.41V11a1 1 0 102 0V3a1 1 0 00-1-1h-8a1 1 0 100 2h5.581L16 14.585 5.419 4H11a1 1 0 100-2H3a1 1 0 00-1 1v8z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <div
    className="Header__Container-sc-1xmu29o-3 emYHde"
  >
    <div
      className="Header__IconWrapper-sc-1xmu29o-1 jgfQsi"
    >
      <svg
        fill="none"
        height="40"
        viewBox="0 0 40 40"
        width="40"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          opacity={0.85}
        >
          <path
            d="M36.804 24.783H32.16a2.053 2.053 0 010-4.105h4.645a2.053 2.053 0 010 4.105z"
            fill="url(#Group_7413_svg__paint0_linear)"
          />
          <path
            d="M6.822 24.783h-4.27a2.053 2.053 0 010-4.105H5.57l2.983-5.74a2.052 2.052 0 113.64 1.888l-3.55 6.842a2.053 2.053 0 01-1.82 1.115z"
            fill="#CB75F6"
          />
          <path
            d="M16.736 32.904a2.102 2.102 0 01-.835-.178 2.052 2.052 0 01-1.04-2.736l9.942-22.271a2.053 2.053 0 013.79.095l5.474 14.177a2.051 2.051 0 11-3.825 1.478l-3.708-9.579-7.93 17.79a2.052 2.052 0 01-1.868 1.224z"
            fill="url(#Group_7413_svg__paint1_linear)"
          />
          <path
            d="M16.736 32.904a2.052 2.052 0 01-1.868-1.252l-6.363-14.97a2.053 2.053 0 013.777-1.608l6.363 14.97a2.053 2.053 0 01-1.888 2.86h-.02z"
            fill="#CB75F6"
          />
        </g>
        <defs>
          <linearGradient
            gradientUnits="userSpaceOnUse"
            id="Group_7413_svg__paint0_linear"
            x1={31.504}
            x2={34.041}
            y1={24.741}
            y2={19.227}
          >
            <stop
              stopColor="#FDBF00"
            />
            <stop
              offset={1}
              stopColor="#FDBF00"
              stopOpacity={0}
            />
          </linearGradient>
          <linearGradient
            gradientUnits="userSpaceOnUse"
            id="Group_7413_svg__paint1_linear"
            x1={17.794}
            x2={35.776}
            y1={23.876}
            y2={23.939}
          >
            <stop
              stopColor="#FFD60A"
            />
            <stop
              offset={1}
              stopColor="#FFD60A"
              stopOpacity={0}
            />
          </linearGradient>
        </defs>
      </svg>
    </div>
    <p
      className="Text-sc-3hujzp-0 Header__Title-sc-1xmu29o-0 gkkzoB bbhUVp"
      color="bulma.100"
      size={20}
    >
      KPI Overview
    </p>
    <div
      className="Header__FilterWrapper-sc-1xmu29o-2"
    >
      <div
        className="Filter__Container-eamt9m-2 jCUaYS"
      >
        <button
          className="Filter__Toggle-eamt9m-1 ejgMRs"
          onClick={[Function]}
        >
          <p
            className="Text-sc-3hujzp-0 Filter__Title-eamt9m-0 JVhrw dMfPPk"
            color="bulma.100"
            size={14}
          >
            by all devices
          </p>
          <svg
            className="sc-eWvPJL"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M2.273 9.34a.933.933 0 011.32 0L16 21.747 28.407 9.34a.933.933 0 111.32 1.32L16.66 23.727a.933.933 0 01-1.32 0L2.273 10.66a.933.933 0 010-1.32z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    className="Selector__Container-t1pfda-0 jxTsGO"
  >
    <div
      className="Selector__List-t1pfda-1 fxCvHC"
    >
      <button
        className="Selector__Button-t1pfda-2 SNdrw"
        onClick={[Function]}
      >
        <div
          className="Selector__ColorPreview-t1pfda-3 gNbEKv"
          color="frieza.100"
        />
        <div
          className="Selector__Label-t1pfda-4 gRNQhl"
        >
          Active players
        </div>
        <div
          className="Selector__Value-t1pfda-5 jhilef"
        >
          3,174
        </div>
      </button>
      <button
        className="Selector__Button-t1pfda-2 SNdrw"
        onClick={[Function]}
      >
        <div
          className="Selector__ColorPreview-t1pfda-3 gbfMUx"
          color="krillin.100"
        />
        <div
          className="Selector__Label-t1pfda-4 gRNQhl"
        >
          Turnover
        </div>
        <div
          className="Selector__Value-t1pfda-5 jhilef"
        >
          12,174.23
        </div>
      </button>
      <button
        className="Selector__Button-t1pfda-2 jJxDTn"
        onClick={[Function]}
      >
        <div
          className="Selector__ColorPreview-t1pfda-3 cgLLjX"
          color="roshi.100"
        />
        <div
          className="Selector__Label-t1pfda-4 gRNQhl"
        >
          GGR
        </div>
        <div
          className="Selector__Value-t1pfda-5 jhilef"
        >
          12,174.23
        </div>
      </button>
      <button
        className="Selector__Button-t1pfda-2 SNdrw"
        onClick={[Function]}
      >
        <div
          className="Selector__ColorPreview-t1pfda-3 cpCDsS"
          color="whis.100"
        />
        <div
          className="Selector__Label-t1pfda-4 gRNQhl"
        >
          Bets
        </div>
        <div
          className="Selector__Value-t1pfda-5 jhilef"
        >
          3,174
        </div>
      </button>
      <button
        className="Selector__Button-t1pfda-2 jJxDTn"
        onClick={[Function]}
      >
        <div
          className="Selector__ColorPreview-t1pfda-3 cPrchz"
          color="chiChi.100"
        />
        <div
          className="Selector__Label-t1pfda-4 gRNQhl"
        >
          Margin
        </div>
        <div
          className="Selector__Value-t1pfda-5 jhilef"
        >
          5.38%
        </div>
      </button>
    </div>
  </div>
  <div
    className="recharts-responsive-container LineChart__ResponsiveContainerCustomized-sc-1b3n5xl-0 hqwJLA"
    style={
      Object {
        "height": "100%",
        "maxHeight": undefined,
        "minHeight": undefined,
        "minWidth": undefined,
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`Line Chart renders Loading 1`] = `
<div
  className="w-full flex flex-row gap-36"
>
  <div
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <div
      className="Panel__Container-wbwz0d-1 iOwlJO"
      style={
        Object {
          "height": 526,
        }
      }
    >
      <div
        className="Panel__Header-wbwz0d-2 jWuxJy"
      >
        <button
          className="Panel__Button-wbwz0d-0 hhoDOq"
          onClick={[Function]}
        >
          <svg
            className="sc-iitrsy Panel__IconRefreshStyled-wbwz0d-3  esdMFj"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M9.638 2.493a1 1 0 011.369-.355l5 2.938a1 1 0 01.328 1.411l-3 4.562a1 1 0 11-1.67-1.098l1.858-2.827C8.67 8.048 5 12.314 5 17.438c0 5.799 4.701 10.5 10.5 10.5S26 23.237 26 17.438c0-3.075-1.32-5.84-3.428-7.761a1 1 0 111.348-1.478A12.47 12.47 0 0128 17.438c0 6.903-5.596 12.5-12.5 12.5S3 24.34 3 17.438c0-5.855 4.025-10.77 9.458-12.128L9.993 3.862a1 1 0 01-.355-1.369z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </button>
        <div />
        <button
          className="Panel__Button-wbwz0d-0 jfgGzg"
          onClick={[Function]}
        >
          <svg
            className="sc-hkwnrn"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M3 19a1 1 0 011 1v5a3 3 0 003 3h18a3 3 0 003-3v-5a1 1 0 112 0v5a5 5 0 01-5 5H7a5 5 0 01-5-5v-5a1 1 0 011-1z"
              fill="currentColor"
              fillRule="evenodd"
            />
            <path
              clipRule="evenodd"
              d="M16.707 23.707a1 1 0 01-1.414 0l-6-6a1 1 0 111.414-1.414L15 20.586V3a1 1 0 112 0v17.586l4.293-4.293a1 1 0 011.414 1.414l-6 6z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </button>
        <button
          className="Panel__Button-wbwz0d-0 jfgGzg"
          onClick={[Function]}
        >
          <svg
            className="sc-exiMuG"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 11a1 1 0 102 0V5.41L14.586 16 4 26.59V21a1 1 0 10-2 0v8a1 1 0 001 1h8a1 1 0 100-2H5.419L16 17.415 26.581 28H21a1 1 0 100 2h8a1 1 0 001-1v-8a1 1 0 10-2 0v5.59L17.414 16 28 5.41V11a1 1 0 102 0V3a1 1 0 00-1-1h-8a1 1 0 100 2h5.581L16 14.585 5.419 4H11a1 1 0 100-2H3a1 1 0 00-1 1v8z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        className="Header__Container-sc-1xmu29o-3 emYHde"
      >
        <div
          className="Header__IconWrapper-sc-1xmu29o-1 jgfQsi"
        >
          <svg
            fill="none"
            height="40"
            viewBox="0 0 40 40"
            width="40"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              opacity={0.85}
            >
              <path
                d="M36.804 24.783H32.16a2.053 2.053 0 010-4.105h4.645a2.053 2.053 0 010 4.105z"
                fill="url(#Group_7413_svg__paint0_linear)"
              />
              <path
                d="M6.822 24.783h-4.27a2.053 2.053 0 010-4.105H5.57l2.983-5.74a2.052 2.052 0 113.64 1.888l-3.55 6.842a2.053 2.053 0 01-1.82 1.115z"
                fill="#CB75F6"
              />
              <path
                d="M16.736 32.904a2.102 2.102 0 01-.835-.178 2.052 2.052 0 01-1.04-2.736l9.942-22.271a2.053 2.053 0 013.79.095l5.474 14.177a2.051 2.051 0 11-3.825 1.478l-3.708-9.579-7.93 17.79a2.052 2.052 0 01-1.868 1.224z"
                fill="url(#Group_7413_svg__paint1_linear)"
              />
              <path
                d="M16.736 32.904a2.052 2.052 0 01-1.868-1.252l-6.363-14.97a2.053 2.053 0 013.777-1.608l6.363 14.97a2.053 2.053 0 01-1.888 2.86h-.02z"
                fill="#CB75F6"
              />
            </g>
            <defs>
              <linearGradient
                gradientUnits="userSpaceOnUse"
                id="Group_7413_svg__paint0_linear"
                x1={31.504}
                x2={34.041}
                y1={24.741}
                y2={19.227}
              >
                <stop
                  stopColor="#FDBF00"
                />
                <stop
                  offset={1}
                  stopColor="#FDBF00"
                  stopOpacity={0}
                />
              </linearGradient>
              <linearGradient
                gradientUnits="userSpaceOnUse"
                id="Group_7413_svg__paint1_linear"
                x1={17.794}
                x2={35.776}
                y1={23.876}
                y2={23.939}
              >
                <stop
                  stopColor="#FFD60A"
                />
                <stop
                  offset={1}
                  stopColor="#FFD60A"
                  stopOpacity={0}
                />
              </linearGradient>
            </defs>
          </svg>
        </div>
        <p
          className="Text-sc-3hujzp-0 Header__Title-sc-1xmu29o-0 gkkzoB bbhUVp"
          color="bulma.100"
          size={20}
        >
          KPI Overview
        </p>
        <div
          className="Header__FilterWrapper-sc-1xmu29o-2"
        >
          <div
            className="Filter__Container-eamt9m-2 jCUaYS"
          >
            <button
              className="Filter__Toggle-eamt9m-1 ejgMRs"
              onClick={[Function]}
            >
              <p
                className="Text-sc-3hujzp-0 Filter__Title-eamt9m-0 JVhrw dMfPPk"
                color="bulma.100"
                size={14}
              >
                by all devices
              </p>
              <svg
                className="sc-eWvPJL"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clipRule="evenodd"
                  d="M2.273 9.34a.933.933 0 011.32 0L16 21.747 28.407 9.34a.933.933 0 111.32 1.32L16.66 23.727a.933.933 0 01-1.32 0L2.273 10.66a.933.933 0 010-1.32z"
                  fill="currentColor"
                  fillRule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        className="Loader__Container-sc-70sa6l-1 bRIzUU"
      >
        <svg
          fill="none"
          height="160"
          width="160"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M40 83.682C19.661 83.682 0 0 0 0v160h160v-50.209s-20.339-44.184-40-44.184c-20.339 0-20.339 2.008-40 2.008-20.339 0-20.339 16.067-40 16.067z"
            fill="#D8E0E3"
          />
          <path
            d="M52.881 93.603C26.441 93.603 0 29 0 29v131h160V45.15s-27.119 100.494-53.559 100.494C80 145.644 80 93.603 52.881 93.603z"
            fill="#EAEEF0"
          />
        </svg>
        <p
          className="Text-sc-3hujzp-0 Loader__Title-sc-70sa6l-0 eWinuX dLXDMA"
          color="trunks.100"
          size={14}
        >
          Loading...
        </p>
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <div
      className="Panel__Container-wbwz0d-1 iOwlJO"
      style={
        Object {
          "height": 526,
        }
      }
    >
      <div
        className="Panel__Header-wbwz0d-2 jWuxJy"
      >
        <button
          className="Panel__Button-wbwz0d-0 hhoDOq"
          onClick={[Function]}
        >
          <svg
            className="sc-iitrsy Panel__IconRefreshStyled-wbwz0d-3  esdMFj"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M9.638 2.493a1 1 0 011.369-.355l5 2.938a1 1 0 01.328 1.411l-3 4.562a1 1 0 11-1.67-1.098l1.858-2.827C8.67 8.048 5 12.314 5 17.438c0 5.799 4.701 10.5 10.5 10.5S26 23.237 26 17.438c0-3.075-1.32-5.84-3.428-7.761a1 1 0 111.348-1.478A12.47 12.47 0 0128 17.438c0 6.903-5.596 12.5-12.5 12.5S3 24.34 3 17.438c0-5.855 4.025-10.77 9.458-12.128L9.993 3.862a1 1 0 01-.355-1.369z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </button>
        <div />
        <button
          className="Panel__Button-wbwz0d-0 jfgGzg"
          onClick={[Function]}
        >
          <svg
            className="sc-hkwnrn"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M3 19a1 1 0 011 1v5a3 3 0 003 3h18a3 3 0 003-3v-5a1 1 0 112 0v5a5 5 0 01-5 5H7a5 5 0 01-5-5v-5a1 1 0 011-1z"
              fill="currentColor"
              fillRule="evenodd"
            />
            <path
              clipRule="evenodd"
              d="M16.707 23.707a1 1 0 01-1.414 0l-6-6a1 1 0 111.414-1.414L15 20.586V3a1 1 0 112 0v17.586l4.293-4.293a1 1 0 011.414 1.414l-6 6z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </button>
        <button
          className="Panel__Button-wbwz0d-0 jfgGzg"
          onClick={[Function]}
        >
          <svg
            className="sc-exiMuG"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 11a1 1 0 102 0V5.41L14.586 16 4 26.59V21a1 1 0 10-2 0v8a1 1 0 001 1h8a1 1 0 100-2H5.419L16 17.415 26.581 28H21a1 1 0 100 2h8a1 1 0 001-1v-8a1 1 0 10-2 0v5.59L17.414 16 28 5.41V11a1 1 0 102 0V3a1 1 0 00-1-1h-8a1 1 0 100 2h5.581L16 14.585 5.419 4H11a1 1 0 100-2H3a1 1 0 00-1 1v8z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        className="Header__Container-sc-1xmu29o-3 emYHde"
      >
        <div
          className="Header__IconWrapper-sc-1xmu29o-1 jgfQsi"
        >
          <svg
            fill="none"
            height="40"
            viewBox="0 0 40 40"
            width="40"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              opacity={0.85}
            >
              <path
                d="M36.804 24.783H32.16a2.053 2.053 0 010-4.105h4.645a2.053 2.053 0 010 4.105z"
                fill="url(#Group_7413_svg__paint0_linear)"
              />
              <path
                d="M6.822 24.783h-4.27a2.053 2.053 0 010-4.105H5.57l2.983-5.74a2.052 2.052 0 113.64 1.888l-3.55 6.842a2.053 2.053 0 01-1.82 1.115z"
                fill="#CB75F6"
              />
              <path
                d="M16.736 32.904a2.102 2.102 0 01-.835-.178 2.052 2.052 0 01-1.04-2.736l9.942-22.271a2.053 2.053 0 013.79.095l5.474 14.177a2.051 2.051 0 11-3.825 1.478l-3.708-9.579-7.93 17.79a2.052 2.052 0 01-1.868 1.224z"
                fill="url(#Group_7413_svg__paint1_linear)"
              />
              <path
                d="M16.736 32.904a2.052 2.052 0 01-1.868-1.252l-6.363-14.97a2.053 2.053 0 013.777-1.608l6.363 14.97a2.053 2.053 0 01-1.888 2.86h-.02z"
                fill="#CB75F6"
              />
            </g>
            <defs>
              <linearGradient
                gradientUnits="userSpaceOnUse"
                id="Group_7413_svg__paint0_linear"
                x1={31.504}
                x2={34.041}
                y1={24.741}
                y2={19.227}
              >
                <stop
                  stopColor="#FDBF00"
                />
                <stop
                  offset={1}
                  stopColor="#FDBF00"
                  stopOpacity={0}
                />
              </linearGradient>
              <linearGradient
                gradientUnits="userSpaceOnUse"
                id="Group_7413_svg__paint1_linear"
                x1={17.794}
                x2={35.776}
                y1={23.876}
                y2={23.939}
              >
                <stop
                  stopColor="#FFD60A"
                />
                <stop
                  offset={1}
                  stopColor="#FFD60A"
                  stopOpacity={0}
                />
              </linearGradient>
            </defs>
          </svg>
        </div>
        <p
          className="Text-sc-3hujzp-0 Header__Title-sc-1xmu29o-0 gkkzoB bbhUVp"
          color="bulma.100"
          size={20}
        >
          KPI Overview
        </p>
        <div
          className="Header__FilterWrapper-sc-1xmu29o-2"
        >
          <div
            className="Filter__Container-eamt9m-2 jCUaYS"
          >
            <button
              className="Filter__Toggle-eamt9m-1 ejgMRs"
              onClick={[Function]}
            >
              <p
                className="Text-sc-3hujzp-0 Filter__Title-eamt9m-0 JVhrw dMfPPk"
                color="bulma.100"
                size={14}
              >
                by all devices
              </p>
              <svg
                className="sc-eWvPJL"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clipRule="evenodd"
                  d="M2.273 9.34a.933.933 0 011.32 0L16 21.747 28.407 9.34a.933.933 0 111.32 1.32L16.66 23.727a.933.933 0 01-1.32 0L2.273 10.66a.933.933 0 010-1.32z"
                  fill="currentColor"
                  fillRule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        className="Selector__Container-t1pfda-0 jxTsGO"
      >
        <div
          className="Selector__List-t1pfda-1 fxCvHC"
        >
          <button
            className="Selector__Button-t1pfda-2 SNdrw"
            onClick={[Function]}
          >
            <div
              className="Selector__ColorPreview-t1pfda-3 gNbEKv"
              color="frieza.100"
            />
            <div
              className="Selector__Label-t1pfda-4 gRNQhl"
            >
              Active players
            </div>
            <div
              className="Selector__Value-t1pfda-5 jhilef"
            >
              3,174
            </div>
          </button>
          <button
            className="Selector__Button-t1pfda-2 SNdrw"
            onClick={[Function]}
          >
            <div
              className="Selector__ColorPreview-t1pfda-3 gbfMUx"
              color="krillin.100"
            />
            <div
              className="Selector__Label-t1pfda-4 gRNQhl"
            >
              Turnover
            </div>
            <div
              className="Selector__Value-t1pfda-5 jhilef"
            >
              12,174.23
            </div>
          </button>
          <button
            className="Selector__Button-t1pfda-2 jJxDTn"
            onClick={[Function]}
          >
            <div
              className="Selector__ColorPreview-t1pfda-3 cgLLjX"
              color="roshi.100"
            />
            <div
              className="Selector__Label-t1pfda-4 gRNQhl"
            >
              GGR
            </div>
            <div
              className="Selector__Value-t1pfda-5 jhilef"
            >
              12,174.23
            </div>
          </button>
          <button
            className="Selector__Button-t1pfda-2 SNdrw"
            onClick={[Function]}
          >
            <div
              className="Selector__ColorPreview-t1pfda-3 cpCDsS"
              color="whis.100"
            />
            <div
              className="Selector__Label-t1pfda-4 gRNQhl"
            >
              Bets
            </div>
            <div
              className="Selector__Value-t1pfda-5 jhilef"
            >
              3,174
            </div>
          </button>
          <button
            className="Selector__Button-t1pfda-2 jJxDTn"
            onClick={[Function]}
          >
            <div
              className="Selector__ColorPreview-t1pfda-3 cPrchz"
              color="chiChi.100"
            />
            <div
              className="Selector__Label-t1pfda-4 gRNQhl"
            >
              Margin
            </div>
            <div
              className="Selector__Value-t1pfda-5 jhilef"
            >
              5.38%
            </div>
          </button>
        </div>
      </div>
      <div
        className="recharts-responsive-container LineChart__ResponsiveContainerCustomized-sc-1b3n5xl-0 hqwJLA"
        style={
          Object {
            "height": "100%",
            "maxHeight": undefined,
            "minHeight": undefined,
            "minWidth": undefined,
            "width": "100%",
          }
        }
      />
    </div>
  </div>
</div>
`;
